添加用户注册功能

--- a/src/main/resources/jedis.properties
+++ b/src/main/resources/jedis.properties
@@ -1,4 +1,4 @@
-host=192.168.26.188
-port=6379
-maxTotal=50
-maxIdle=10
+jedis.host=192.168.26.188
+jedis.port=6379
+jedis.maxTotal=50
+jedis.maxIdle=10
