--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>cn.unchen.ssm.travel</groupId>
     <artifactId>heima_travel</artifactId>
     <version>1.0</version>
+    <packaging>war</packaging>
 
     <!-- 统一管理jar包版本 -->
     <properties>
